--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -57,6 +57,7 @@
     "@adonisjs/core": "^6.14.1",
     "@adonisjs/cors": "^2.2.1",
     "@tuyau/core": "^0.2.1",
+    "@tuyau/openapi": "^1.0.2",
     "@vinejs/vine": "^2.1.0",
     "reflect-metadata": "^0.2.2"
   },
